--- a/dags/transform/dbt_project.yml
+++ b/dags/transform/dbt_project.yml
@@ -1,20 +1,15 @@
 name: 'transform'
-
 profile: 'e-commerce'
-
+model-paths: ["models"]  
 models:
-  e-commerce:
+  transform:
     staging:
-      +materialized: view 
-      +schema: staging  
-      snowflake_warehouse: "{{ env_var('SNOWFLAKE_WAREHOUSE') }}"
+      +materialized: view
+      snowflake_warehouse: "{{ env_var('SNOWFLAKE_WAREHOUSE') }}"  # Models in `staging` will go to `staging` schema
 
     intermediate:
       +materialized: table
-      +schema: intermediate  
       snowflake_warehouse: "{{ env_var('SNOWFLAKE_WAREHOUSE') }}"
+      +schema: intermediate  # Models in `intermediate` will go to `intermediate` schema
 
-    analytics:
-      +materialized: table
-      +schema: marts
-      snowflake_warehouse: "{{ env_var('SNOWFLAKE_WAREHOUSE') }}"
+
